tests/ui/cast/ptr-to-trait-obj-wrap-different-args.stderr
error[E0606]: casting `*const W<(dyn A<F> + 'static)>` as `*const dyn A<G>` is invalid
  --> $DIR/ptr-to-trait-obj-wrap-different-args.rs:12:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error[E0606]: casting `*const W<W<(dyn A<F> + 'static)>>` as `*const W<dyn A<G>>` is invalid
  --> $DIR/ptr-to-trait-obj-wrap-different-args.rs:17:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error[E0606]: casting `*const W<(dyn A<F> + 'static)>` as `*const X<dyn A<G>>` is invalid
  --> $DIR/ptr-to-trait-obj-wrap-different-args.rs:22:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error[E0606]: casting `*const W<W<(dyn A<F> + 'static)>>` as `*const W<X<dyn A<G>>>` is invalid
  --> $DIR/ptr-to-trait-obj-wrap-different-args.rs:27:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error[E0606]: casting `*const (dyn A<F> + 'static)` as `*const W<dyn A<G>>` is invalid
  --> $DIR/ptr-to-trait-obj-wrap-different-args.rs:32:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0606`.
